# game-jam-des-volcans-03-03-2023

./: .gitignore  CMakeLists.txt  FRsupEN.hpp  LISEZMOI.md  README.md  prog
include/: Affichable.hpp  BoutonChargerScene.hpp  Context.hpp  Contexte.hpp  EnumScene.hpp  Fond.hpp  Gestionnaire.hpp  Manager.hpp  Renderer.hpp  allumette.hpp  armoire.hpp  bougeable.hpp  canape.hpp  ciseaux.hpp  corbeille.hpp  enum_type.hpp  fixe.hpp  inflammable.hpp  issue.hpp  marteau.hpp  neon.hpp  objet.hpp  prise.hpp
ressources/: armoire_ferme.png~
ressources/autres/: banner_logo_jam_des_volcan_2023.jpg:Zone.Identifier
ressources/kra/: allumette.kra  allumette.kra~  allumette_range.kra  armoire_ferme.kra  armoire_ferme_rogne.kra  armoire_ferme_rogne.kra~  armoire_ouvert.kra  armoire_ouvert_rogne.kra  brise_vitre_fond.kra  brise_vitre_range.kra  brise_vitre_sorti.kra  canape_ignifuge.kra  ciseaux.kra  ciseaux_cache.kra  ciseaux_cache.kra~  ciseaux_fond.kra  corbeille.kra  corbeille.kra~  corbeille_brule.kra  corbeille_brule.kra~  corbeille_brule_beaucoup.kra  corbeille_brule_beaucoup.kra~  eau.kra  eau_remplie.kra  eau_remplie.kra~  inflammable.kra  inflammable_range.kra  inflammable_range.kra~  issue_de_secours.kra  neon.kra  neon_casse.kra  neon_casse.kra~  piece_1.kra  piece_1.kra~  piece_2.kra  piece_2.kra~  prise.kra  prise_casse.kra  prise_casse.kra~  prise_face.kra  (+6 more)
ressources/objets/: bouton_retour.png~
src/: Affichable.cpp  BoutonChargerScene.cpp  Context.cpp  Contexte.cpp  Fond.cpp  Gestionnaire.cpp  Manager.cpp  allumette.cpp  armoire.cpp  bougeable.cpp  canape.cpp  ciseaux.cpp  corbeille.cpp  fixe.cpp  inflammable.cpp  issue.cpp  main.cpp  marteau.cpp  neon.cpp  objet.cpp  prise.cpp
